Fixing Header on iPhone4

--- a/ihavebeendays/sass/components/_Header.scss
+++ b/ihavebeendays/sass/components/_Header.scss
@@ -9,8 +9,8 @@
 }
 
 .Header-logo {
-	color: #222;
-  font-size: 16px;
+  color: #222;
+  font-size: 14px;
 
   @include tablet-and-desktop {
 	  font-size: 18px;
