--- a/ihavebeendays/static/css/styles.css
+++ b/ihavebeendays/static/css/styles.css
@@ -8,7 +8,7 @@
 
 .Header-logo {
   color: #222;
-  font-size: 16px; }
+  font-size: 14px; }
   @media (min-width: 768px) {
     .Header-logo {
       font-size: 18px; } }
